add the fixed index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Coca-Cola Website</title>
+    <style>
+        :root {
+            --primary-color: #ff0000;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fff;
+            color: #000;
+        }
+        nav {
+            background-color: var(--primary-color);
+            color: #fff;
+            padding: 10px;
+        }
+        .hero {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 300px;
+            background: linear-gradient(to bottom, rgba(255, 0, 0, 1) 0%, rgba(255, 165, 0, 1) 50%, rgba(255, 0, 0, 1) 100%);
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        nav li {
+            margin-right: 10px;
+        }
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+    </nav>
+    <div class="hero">
+        <div>
+            <h1>Coca-Cola</h1>
+            <p>Coca-Cola is a soft drink produced and distributed by The Coca-Cola Company. It is one of the world's most popular soft drinks and is available in many different varieties.</p>
+        </div>
+    </div>
+    <div style="padding: 20px;">
+        <h2>About Coca-Cola</h2>
+        <p>Coca-Cola is a soft drink produced and distributed by The Coca-Cola Company. It is one of the world's most popular soft drinks and is available in many different varieties. Coca-Cola was first introduced in Atlanta, Georgia in 1886 and has since become a global brand with fans all over the world.</p>
+        <h2>Coca-Cola Products</h2>
+        <p>Coca-Cola offers a wide range of products, including soft drinks, sports drinks, energy drinks, and more. Some of their most popular products include Coca-Cola Classic, Coca-Cola Zero, and Coca-Cola Light. Coca-Cola also offers a variety of flavors, including vanilla, cherry, and fruit flavors.</p>
+        <h2>Coca-Cola Services</h2>
+        <p>In addition to their products, Coca-Cola also offers a variety of services to their customers. These services include delivery services, concessions at sporting events, and more. Coca-Cola is committed to providing their customers with a great experience and making their products accessible to everyone.</p>
+    </div>
+    <script>
+        // Add any JavaScript functionality here
+    </script>
+</body>
+</html>
